fix: don't flicker loading spinner

--- a/web/index.css
+++ b/web/index.css
@@ -4,6 +4,19 @@
 @theme {
   --spacing-header: calc(var(--spacing) * 12);
   --spacing-body: calc(100dvh - var(--spacing-header));
+
+  --animate-fade-in: fade-in 180ms ease-out;
+
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+      transform: translate3d(0, 4px, 0);
+    }
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+  }
 }
 
 body {
